@@ -33,6 +33,13 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * The "ant" build system now loads debian/ant.properties
     automatically before build and clean (like CDBS).  Thanks to
     Thomas Koch for the report.  (Closes: #563909)
+  * Dh_lib: Add install_dh_config_file to install a file either by
+    copying the source file or (with an executable file under compat
+    9) execute the file and use its output to generate the
+    destination.
+  * dh_lintian: Under compat 9, the debian/lintian-overrides are now
+    executed if they have the exec-bit set like the debian/install
+    files.  Thanks to Axel Beckert for the report.  (Closes: #698500)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
